src/app/globals.css
@import 'tailwindcss';

@theme inline {
  --font-sans: var(--font-outfit);
  --font-mono: var(--font-fira-code);
  --font-kana: var(--font-kana);
  --color-tabi: var(--color-red-500);
  --drop-shadow-tabi: 4px 4px 0px var(--color-stone-700);
}

@layer base {
  ::selection {
    @apply bg-tabi text-stone-900;
  }

  body {
    @apply bg-stone-900 font-sans text-stone-100;
  }

  h1 {
    @apply text-8xl font-bold;
  }

  h2 {
    @apply text-6xl font-bold;
  }

  p {
    @apply text-center text-base;
  }

  a {
    @apply text-tabi hover:bg-tabi px-1 hover:text-stone-800;
  }

  a:has(> img, > svg) {
    @apply p-0 hover:bg-transparent;
  }

  ul {
    @apply list-disc marker:text-stone-100;
  }

  code {
    @apply font-mono;
  }
}

@layer utilities {
  .min-h-mobile {
    min-height: 90vh;
  }
}

